# vcpkg-gui

./: .gitignore  CMakeLists.txt  README.md  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  process.cpp  process.h  process.ui  res.aps  res.rc  ui_dialog.h  ui_mainwindow.h
